--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #A01540; box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #A01540; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);">
   <div class="container">
     <a class="navbar-brand text-color" [routerLink]="['/']">
       <span class="brand-name"><i class="fa-solid fa-leaf"></i> .msgRecyclingRewards</span>
