--- a/src/app/component/vouchers/vouchers.component.css
+++ b/src/app/component/vouchers/vouchers.component.css
@@ -42,6 +42,29 @@
   color: white;
 }
 
+.copy-to-clipboard {
+  position: relative;
+  cursor: pointer;
+}
+
+.voucher-code {
+  margin-right: 10px;
+}
+
+.copy-to-clipboard i {
+  visibility: hidden;
+  position: absolute;
+  color: #a01540;
+  left: 80px;
+  /*top: 50%;*/
+  /*transform: translateY(-50%);*/
+}
+
+.copy-to-clipboard:hover i {
+  visibility: visible;
+}
+
+
 .btn-details:hover {
   background-color: #a01540;
   color: white;
