--- a/src/app/component/voucher-details/voucher-details.component.html
+++ b/src/app/component/voucher-details/voucher-details.component.html
@@ -1,1 +1,107 @@
-<p>voucher-details works!</p>
+<ng-container *ngIf="(voucherDetailsState$ | async) as state" [ngSwitch]="state.dataState">
+  <ng-container *ngSwitchCase="DataState.LOADED">
+    <app-navbar [user]="state?.appData?.data?.user"></app-navbar>
+    <div style="margin-top: 90px"></div>
+    <section>
+      <div class="container">
+        <nav aria-label="breadcrumb" class="breadcrumb-nav">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a [routerLink]="['/']">Home</a></li>
+            <li class="breadcrumb-item"><a [routerLink]="['/vouchers']">Vouchers</a></li>
+            <li class="breadcrumb-item active" aria-current="page">{{ state?.appData?.data?.voucher.uniqueCode }}</li>
+          </ol>
+        </nav>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="voucher">
+              <div class="voucher-header">
+                <div class="voucher-company">
+                  <a class="btn btn-recycle" style="font-weight: 500;">
+                    <i class="bi bi-file-earmark-pdf-fill"></i>
+                    Download Voucher (PDF)
+                  </a>
+                </div>
+              </div>
+              <hr>
+              <div id="voucher">
+                <div class="voucher-header">
+                  <h2 class="voucher-title mb-4">Sustainability Voucher <span class="voucher-code">#{{ state?.appData?.data?.voucher.uniqueCode }}</span></h2>
+                  <div class="voucher-from">
+                    <small>from</small>
+                    <address class="address-details">
+                      <strong class="text-inverse">RecyclingRewards.io</strong><br>
+                      12 Asdas, Timisoara, Romania<br>
+                      Phone: +40 0787 767 434<br>
+                      Email:
+                    </address>
+                  </div>
+                  <div class="voucher-to">
+                    <small>to</small>
+                    <address class="address-details">
+                      <strong class="text-inverse">{{ state?.appData?.data?.user.firstName }} {{ state?.appData?.data?.user.lastName }}</strong><br>
+                      Email: {{ state?.appData?.data?.user.email }} <br>
+                      Phone: {{ state?.appData?.data?.user.phone }} <br>
+                    </address>
+                  </div>
+                  <div class="voucher-date">
+                    <img src="../../../../assets/msg-logo.svg" width="90px"  alt="RecyclingRewards Logo" style="margin-top: -100px">
+                    <br>
+                    <div style="margin-top: -20px">
+<!--                      <small>Voucher Code: #{{ state?.appData?.data?.voucher.uniqueCode }}</small>-->
+                      <div class="date text-inverse">Earn Date: {{ state?.appData?.data?.voucher?.expiresAt | date: 'mediumDate' }}</div>
+                      <div class="date text-inverse">Expires At: {{ state?.appData?.data?.voucher?.expiresAt | date: 'mediumDate' }}</div>
+                      <div class="date text-inverse">Redeem Date: {{ state?.appData?.data?.voucher?.createdAt | date: 'mediumDate' }}</div>
+                      Voucher Type: <span class="badge bg-recycle">
+                        {{ state?.appData?.data?.voucher.voucherType.name }}
+                      </span>
+                    </div>
+                  </div>
+                </div>
+                <div class="voucher-content">
+                  <div class="table-responsive">
+                    <!-- Add your voucher content here -->
+                  </div>
+                  <div class="voucher-price">
+                    <div class="voucher-price-left">
+                      <div class="voucher-price-row">
+                        <div class="sub-price">
+                          <small>SUBTOTAL</small>
+                          <span class="text-inverse"></span>
+                        </div>
+                        <div class="sub-price">
+                          <i class="fa fa-plus text-muted"></i>
+                        </div>
+                        <div class="sub-price">
+                          <small>TAX (5.4%)</small>
+                          <span class="text-inverse">ADSADASD</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="voucher-price-right">
+                      <small>TOTAL</small> <span class="f-w-600">INDEX</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="voucher-footer">
+                  <p class="text-center m-b-5 f-w-600">
+                    THANK YOU FOR YOUR CONTRIBUTION
+                  </p>
+                  <p class="text-center contact-details">
+                    <span><i class="fa fa-fw fa-lg fa-globe"></i> RecyclingRewards.io</span> <br>
+                    <span><i class="fa fa-fw fa-lg fa-phone-volume"></i> Telephone: +40 707 474 3563</span><br>
+                    <span><i class="fa fa-fw fa-lg fa-envelope"></i> Email: support@recycling-rewards.io</span>
+                  </p>
+                  <p class="text-center redemption-instructions">
+                    <strong>Redemption Instructions:</strong><br>
+                    Visit our partner businesses and present this voucher for redemption.<br>
+                    For detailed guidelines, contact us or visit our website.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </ng-container>
+</ng-container>
